<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/favorite"
            android:title="@string/favorite_user"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            app:showAsAction="never" />
    </group>
</menu>